# apocalypse-bench

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  apocbench-direct-vs-bm25-research.yml  apocbench-lfm2.5-candidate-only.yml  apocbench-lfm2.5-deepseek.yml  apocbench-wiki.yml  apocbench.yml  package.json  pnpm-lock.yaml
crates/wiki-search/: Cargo.toml
crates/wiki-search/src/: bm25.rs  corpus.rs  main.rs  service.rs
crates/wiki-search/tests/: bm25_search.rs  corpus_ingest.rs  hybrid_search.rs  read_source.rs
crates/wiki-search/tests/fixtures/: wiki-mini.jsonl
dashboard/: README.md
data/question_bank/: AGR.jsonl  CHEM.jsonl  COMMS.jsonl  (+11 more)
docs/: benchmark-overview.md  dataset-workflow.md  export-md.md  question-bank.md  wiki-retrieval.md
scripts/: codex_rejudge.ts  export-plot-csvs.ts  make_retrieval_debug_config.ts  retrieval_debug_report.ts  run_retrieval_debug_chunks.sh  wiki_bm25_article_probe.py  wiki_bm25_article_select.py  wiki_bm25_lexicon_probe.py  wiki_dense_compare.py  wiki_download.py  wiki_embed.py  wiki_embed_test.py
test/: cli-run-and-judge.test.ts  codex-rejudge.test.ts  config-load.test.ts  config-schema.test.ts  dataset-export-fresh.test.ts  dataset-validate.test.ts  integration-run.test.ts  judge-retry.test.ts  model-resolver.test.ts  openai-compatible-client.test.ts  orchestrator-regression.test.ts  pi-text-tool-protocol.test.ts  pi-wiki-agent.test.ts  prompts.test.ts  retrieval-report.test.ts  retry-policy.test.ts  wiki-agent.test.ts  wiki-client.test.ts  wiki-config.test.ts  wiki-rag.test.ts
tmp/: mini_compiled.jsonl
(+36 files in other folders)
